== 2010/03/17 ==
Added libs to the distribution zip, changed references from /ext to /monitor_ext to allow parallel isntallation
with eLife server.

Released [attachment:wiki:SoftwareReleases:eLife_monitor_2.2.zip V2.2] 

== 2010/03/16 ==
Add a property for datafiles location
eg.  -DeSmart_install="../eLife_Server" -Dmonitor_web="./monitor_web" -Ddatafiles="../eLife_Server/datafiles"

Released [attachment:wiki:SoftwareReleases:eLife_monitor_2.1.zip V2.1] 


== 2010/02/28 ==
Rewrote as a Restful interface for admin functions
Incorporated WEBDAV to simplify access to eLife file system
Incorporated an embedded web application to allow access to monitor functions without requiring the admin tool.
To run the embedded web application goto https://server:8082/ , log in using your elife admin account
Brought java libs in line with eLife libs to simplify release process.
To install, unzip and ensure monitor_web is parallel to the bin directory containing the jar file.
Launch using java -jar eMonitor.jar with bin as the current directory, other current directories can be used
however the path to the server installation and the web installation will need to be specified using java 
environment commands.
eg.  -DeSmart_install="../eLife_Server" -Dmonitor_web="./monitor_web"

Released [attachment:wiki:SoftwareReleases:eLife_monitor_2.0.zip V2.0] 

== 2005/12/11 ==
Ensure script files are sent to the admin client in base 64 encoding.
Support upload of base 64 encoded files, add the attribute BASE64=Y to the upload XML header.
Released V1.47

== 2005/6/14 ==
Added base 64 support for log files
Released V1.44

== 2005/6/7 ==
Added support for wildcard file selection in directory list. Supports log file access to admin plugin
Released V1.43

== 2005/2/26 ==
Handled connection from two Jedit plugin connections better
Added startup parsing of bootstrap and passing startup file to jEdit plugin
Added better error transmitting to the admin plugin 